[package]
name = "joecrypt"
version = "0.1.0"
authors = ["Li Xu <lixu_work@yahoo.com>"]
repository = "https://github.com/xvllinihao/joecrypt"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
